--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>cn.xlbweb</groupId>
-    <artifactId>fly</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>fly-browser</module>
-        <module>fly-cms</module>
-        <module>fly-wechat</module>
-        <module>fly-browser</module>
-        <module>fly-common</module>
-    </modules>
-
-    <!--SpringBoot项目-->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -23,13 +8,30 @@
         <relativePath/>
     </parent>
 
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>cn.xlbweb</groupId>
+    <artifactId>fly</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>fly-browser</module>
+        <module>fly-cms</module>
+        <module>fly-wechat</module>
+        <module>fly-browser</module>
+        <module>fly-common</module>
+        <module>fly-entity</module>
+    </modules>
+
     <name>fly</name>
     <url>http://fly.xlbweb.cn</url>
+    <description>仿fly社区项目</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
