--- a/fly-browser/fly-browser-service/pom.xml
+++ b/fly-browser/fly-browser-service/pom.xml
@@ -6,22 +6,18 @@
         <groupId>cn.xlbweb</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>fly-browser-service</artifactId>
 
     <name>fly-browser-service</name>
-    <url>http://fly.xlbweb.cn</url>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>cn.xlbweb</groupId>
+            <artifactId>fly-browser-mapper</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
-
-    <build>
-    </build>
 </project>
