--- a/fly-browser/pom.xml
+++ b/fly-browser/pom.xml
@@ -6,29 +6,30 @@
         <groupId>cn.xlbweb</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>fly-browser</artifactId>
     <packaging>pom</packaging>
 
     <name>fly-browser</name>
-    <url>http://fly.xlbweb.cn</url>
+
     <modules>
         <module>fly-browser-mapper</module>
         <module>fly-browser-service</module>
         <module>fly-browser-controller</module>
     </modules>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>cn.xlbweb</groupId>
             <artifactId>fly-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.xlbweb</groupId>
+            <artifactId>fly-entity</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
